--- a/_data/pageMap.yml
+++ b/_data/pageMap.yml
@@ -14,6 +14,14 @@ default-post:
     url: /blog/2019/08/08/Naver_Developer_Open_Class_2019
     updated: '2020-07-01 13:53:32 +0900'
     children: []
+admit-rate:
+    type: wiki
+    title: '전공별 합격률'
+    summary: ""
+    parent: ""
+    url: /wiki/admit-rate
+    updated: '2022-07-18 09:18:15 +0900'
+    children: []
 how-to:
     type: wiki
     title: 'HOW TO USE DE ANZA WIKI'
