--- a/_data/tagMap.yml
+++ b/_data/tagMap.yml
@@ -6,3 +6,5 @@ How-to-Use-DeAnza-Wiki:
     - {fileName: how-to-transfer}
 전공:
     - {fileName: majorNschool-selection}
+수강신청:
+    - {fileName: registration}
