--- a/_data/pageMap.yml
+++ b/_data/pageMap.yml
@@ -38,3 +38,11 @@ majorNschool-selection:
     url: /wiki/majorNschool-selection
     updated: '2022-07-18 01:59:22 +0900'
     children: []
+registration:
+    type: wiki
+    title: 수강신청
+    summary: ""
+    parent: ""
+    url: /wiki/registration
+    updated: '2022-07-18 22:18:36 +0900'
+    children: []
