--- a/_data/tagCount.yml
+++ b/_data/tagCount.yml
@@ -1,8 +1,29 @@
 -
+    name: concurrent
+    size: 1
+-
+    name: enrollment
+    size: 1
+-
+    name: 'ESL,'
+    size: 1
+-
     name: How-to-Use-DeAnza-Wiki
     size: 1
 -
+    name: '배치,'
+    size: 1
+-
+    name: '배치고사,'
+    size: 1
+-
+    name: 선수과목
+    size: 1
+-
     name: 수강신청
+    size: 1
+-
+    name: '시험,'
     size: 1
 -
     name: 전공
