--- a/_data/tagCount.yml
+++ b/_data/tagCount.yml
@@ -11,6 +11,9 @@
     name: How-to-Use-DeAnza-Wiki
     size: 1
 -
+    name: UC
+    size: 3
+-
     name: '배치,'
     size: 1
 -
@@ -20,10 +23,16 @@
     name: 선수과목
     size: 1
 -
+    name: '선수과목,'
+    size: 1
+-
     name: 수강신청
     size: 1
 -
     name: '시험,'
+    size: 1
+-
+    name: '원서,'
     size: 1
 -
     name: 전공
@@ -32,5 +41,5 @@
     name: 편입
     size: 1
 -
-    name: 합격률
+    name: '합격률,'
     size: 1
