--- a/_data/tagMap.yml
+++ b/_data/tagMap.yml
@@ -6,6 +6,7 @@ UC:
     - {fileName: uc-application}
 '수강신청,':
     - {fileName: assessment}
+    - {fileName: class-difficulty}
 '시험,':
     - {fileName: assessment}
 '배치,':
@@ -14,19 +15,31 @@ UC:
     - {fileName: assessment}
 '선수과목,':
     - {fileName: assist}
+'난이도,':
+    - {fileName: class-difficulty}
+RMP:
+    - {fileName: class-difficulty}
 'ESL,':
     - {fileName: esl}
 concurrent:
     - {fileName: esl}
 enrollment:
     - {fileName: esl}
+'학점,':
+    - {fileName: grading}
+PNP:
+    - {fileName: grading}
 How-to-Use-DeAnza-Wiki:
     - {fileName: how-to}
 편입:
     - {fileName: how-to-transfer}
+IGETC:
+    - {fileName: igetc}
 전공:
     - {fileName: majorNschool-selection}
 수강신청:
     - {fileName: registration}
 '원서,':
     - {fileName: uc-application}
+준비:
+    - {fileName: vaccination}
