--- a/_data/pageMap.yml
+++ b/_data/pageMap.yml
@@ -24,7 +24,7 @@ assist:
     children: []
 class-difficulty:
     type: wiki
-    title: '수업 난이도 및 구성'
+    title: '수업 정보'
     summary: ""
     parent: ""
     url: /wiki/class-difficulty
@@ -48,11 +48,19 @@ esl:
     children: []
 grading:
     type: wiki
-    title: 점수체계
+    title: 학점체계
     summary: ""
     parent: ""
     url: /wiki/grading
     updated: '2022-07-27 20:29:14 +0900'
+    children: []
+honor:
+    type: wiki
+    title: ""
+    summary: ""
+    parent: ""
+    url: /wiki/honor
+    updated: '2022-07-31 09:16:08 +0900'
     children: []
 how-to:
     type: wiki
@@ -102,6 +110,14 @@ mythNtruth:
     url: /wiki/mythNtruth
     updated: '2022-07-29 20:54:20 +0900'
     children: []
+pre-reg:
+    type: wiki
+    title: checklist
+    summary: ""
+    parent: ""
+    url: /wiki/pre-reg
+    updated: '2022-07-31 09:17:15 +0900'
+    children: []
 reg-planning:
     type: wiki
     title: 수강계획
@@ -118,6 +134,14 @@ registration:
     url: /wiki/registration
     updated: '2022-07-18 22:18:36 +0900'
     children: []
+tag:
+    type: wiki
+    title: ""
+    summary: ""
+    parent: ""
+    url: /wiki/tag
+    updated: '2022-07-31 09:16:20 +0900'
+    children: []
 uc-application:
     type: wiki
     title: 'UC 원서'
@@ -128,7 +152,7 @@ uc-application:
     children: []
 vaccination:
     type: wiki
-    title: 예방접종
+    title: 접종증명
     summary: ""
     parent: ""
     url: /wiki/vaccination
